EnvenDrivenAutoScaler/k8s-manifests/kustomize/expense-tracker-kustomize/base/resources/routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
  name: expense-tracker-ingress
spec:
  ingressClassName: nginx-expense-tracker
  rules:
  - http:
      paths:
      - backend:
          service:
            name: expense-tracker-be-service
            port:
              number: 7070
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: expense-tracker-fe-service
            port:
              number: 80
        path: /
        pathType: Prefix
